[Fetch API] Streaming error should be reported as a TypeError

When the browser encounters an error while reading a response body, it should
error the body stream with a TypeError.

BUG=656601

Review-Url: https://codereview.chromium.org/2439673002
Cr-Commit-Position: refs/heads/master@{#427052}

Former-commit-id: 0856679f482230c36c3e1261247f30a0dcfa916e